@@ -411,7 +411,7 @@ In Gnome, your preferred browser can be changed in <b>System &gt; Preferences &g
 If you're not using Gnome, e.g KDE or some other desktop environment, you're fresh out of luck! Any patches to automatically
 support opening a URL in KDE's preferred browser would be happily accepted.
 <br/><br/>
-While holding down CTRL you can single left-click a URL to open it in your preferred browser.
+While holding down CTRL you can single left-click a URL to open it in your preferred browser. If you really want to change this to plain left-click you can type: <b>/set gui_url_mod 0</b>, provided you have XChat 2.6.6 or newer.
 <br/><br/>
 You can also add more items to the right-click menu in XChat: <b>Settings &gt; Advanced &gt; URL Handlers</b>.
 <br/>For example, you could add an entry like <b>!firefox -a firefox -remote 'openURL(%s,new-tab)'</b>
