@@ -553,14 +553,14 @@ pevt_notifynumber_help
 Notify Offline
 XP_TE_NOTIFYOFFLINE
 pevt_generic_nick_help
-%C22*%O$tNotify: $1 is offline ($2).
-2
+%C22*%O$tNotify: $1 is offline ($3).
+3
 
 Notify Online
 XP_TE_NOTIFYONLINE
 pevt_generic_nick_help
-%C22*%O$tNotify: $1 is online ($2).
-2
+%C22*%O$tNotify: $1 is online ($3).
+3
 
 Open Dialog
 XP_TE_OPENDIALOG
