@@ -26,8 +26,11 @@ highlights. The full CVS log is available at www.xchat.org/cvslog/
    UTF-8.
  - Fixed: [1544960] quitting via tabs behaves bad on bncs.
  - Fixed: [1551620] --version flag needs display.
+ - Fixed: [1539236] problem with the /url command (irc:// handling).
  - "Clear" button in Ban List window now has a 'Are you sure?' dialog
    for safety.
+ - Notify list can now contain entries for one or more specific networks
+   only.
  - 
  - 
  - Perl (Lian Wan Situ)
